--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "2.1.8",
+    "axios": "^1.7.4",
+    "date-fns": "^3.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-day-picker": "^9.0.8",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
-    "@vitejs/plugin-react": "4.2.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "10.4.16",
     "postcss": "8.4.32",
-    "tailwindcss": "3.4.0",
-    "vite": "5.0.10"
+    "tailwindcss": "^3.4.0",
+    "vite": "^5.4.0"
   }
 }
