--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.13.2
 annotated-types==0.7.0
 anyio==4.4.0
+bcrypt==4.2.0
 click==8.1.7
+colorama==0.4.6
 dnspython==2.6.1
 ecdsa==0.19.0
 email_validator==2.2.0
@@ -26,6 +28,7 @@ python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
 rsa==4.9
+setuptools==72.2.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
