--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "@material-tailwind/react": "2.1.8",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
+    "datepicker": "^0.0.0",
     "react": "18.2.0",
+    "react-datepicker": "^7.3.0",
     "react-day-picker": "^9.0.8",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.26.0",
