--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "2.1.8",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
+    "flatpickr": "^4.6.13",
     "react": "18.2.0",
     "react-day-picker": "^9.0.8",
     "react-dom": "18.2.0",
