--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@material-tailwind/react": "2.1.8",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
+    "plotly.js": "^2.34.0",
     "react": "18.2.0",
     "react-day-picker": "^9.0.8",
     "react-dom": "18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.26.0",
     "xlsx": "^0.18.5"
   },
