--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "2.1.8",
     "axios": "^1.7.4",
+    "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
+    "i": "^0.3.7",
     "plotly.js": "^2.34.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-day-picker": "^9.0.8",
     "react-dom": "18.2.0",
