--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ Mako==1.3.5
 MarkupSafe==2.1.5
 matplotlib==3.9.2
 nest-asyncio==1.6.0
-numpy==2.0.1
+numpy==1.26.4
 openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.2
@@ -50,6 +50,7 @@ plotly==5.23.0
 psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pydantic==2.8.2
+pydantic-extra-types==2.9.0
 pydantic_core==2.20.1
 pydot==3.0.1
 pyparsing==3.1.2
@@ -74,5 +75,7 @@ typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 uvicorn==0.30.6
+well-profile==0.8.1
+wellschematicspy==0.1.1
 Werkzeug==3.0.3
 zipp==3.20.0
