--- a/requirements.txt
+++ b/requirements.txt
@@ -49,9 +49,8 @@ pillow==10.4.0
 plotly==5.23.0
 psycopg2-binary==2.9.9
 pyasn1==0.6.0
-pydantic==2.8.2
-pydantic-extra-types==2.9.0
-pydantic_core==2.20.1
+pydantic==1.9.2  # Updated to a version compatible with fastapi and wellschematicspy
+pydantic_core==2.2.0  # Match with compatible pydantic version
 pydot==3.0.1
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
