--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,33 +6,39 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@dropzone-ui/react": "^7.0.4",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.1.5",
-    "@material-tailwind/react": "2.1.8",
+    "ag-grid-community": "^32.1.0",
+    "ag-grid-react": "^32.1.0",
     "axios": "^1.7.4",
-    "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
-    "i": "^0.3.7",
+    "framer-motion": "^11.3.28",
     "plotly.js": "^2.34.0",
-    "react": "18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^7.3.0",
+    "react": "^18.3.1",
     "react-day-picker": "^9.0.8",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-plotly.js": "^2.6.0",
-    "react-router-dom": "^6.26.0",
-    "xlsx": "^0.18.5"
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
-    "@types/react": "18.2.45",
-    "@types/react-dom": "18.2.18",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.32",
-    "tailwindcss": "^3.4.0",
-    "vite": "^5.4.0"
+    "@eslint/js": "^9.9.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^9.9.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "rimraf": "^6.0.1",
+    "vite": "^5.4.1"
   }
 }
