--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,17 @@ services:
       - SQLALCHEMY_DATABASE_URL=sqlite:///./test.db
     env_file:
       - .env
+
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    depends_on:
+      - backend
