--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,24 +1,10 @@
-# Use Node.js 20 as the base image
 FROM node:20-alpine
-
-# Set the working directory in the container
-WORKDIR /backendSKKMigas
-
-# Copy package.json and package-lock.json
+WORKDIR /app
 COPY frontend/package*.json ./
-
-# Install project dependencies
 RUN npm install
-
+COPY frontend/ ./
 RUN chown -R node:node /app
 USER node
 
-# Copy frontend project files into the container
-COPY ./frontend /backendSKKMigas/frontend
-
-# Make port 3000 available to the world outside this container
-EXPOSE 3000
-
 # Start the app in development mode for hot-reloading
-# Dalam Dockerfile.frontend
 CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
