--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
     ports:
       - "5173:5173"
     volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      - ./frontend:/backendSKKMigas/frontend
+      - /backendSKKMigas/frontend/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
     depends_on:
