--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,9 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./requirements.txt:/app/requirements.txt
-      - ./backendSKKMigas:/app/backendSKKMigas
+      - ./requirements.txt:/backendSKKMigas/requirements.txt
+      - ./backend:/backendSKKMigas/backend
+      - ./run.py:/backendSKKMigas/run.py
     environment:
       - PYTHONUNBUFFERED=1
       - SQLALCHEMY_DATABASE_URL=sqlite:///./test.db
@@ -21,8 +22,8 @@ services:
     ports:
       - "5173:5173"
     volumes:
-      - ./frontend:/backendSKKMigas/frontend
-      - /backendSKKMigas/frontend/node_modules
+      - ./frontend:/app
+      - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
     depends_on:
