--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@amcharts/amcharts3-react": "^3.1.1",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/montserrat": "^5.0.19",
     "@heroicons/react": "^2.1.5",
+    "@tabler/icons-react": "^3.14.0",
     "ag-grid-community": "^32.1.0",
     "ag-grid-react": "^32.1.0",
     "amcharts3": "^3.21.15",
@@ -24,8 +26,8 @@
     "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "framer-motion": "^11.3.28",
+    "framer-motion": "^11.3.31",
+    "leaflet": "^1.9.4",
     "plotly.js": "^2.34.0",
     "react": "^18.3.1",
     "react-amcharts": "^1.0.0",
@@ -33,6 +35,7 @@
     "react-day-picker": "^9.0.8",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.26.1",
     "three": "^0.167.1"
