--- a/.env
+++ b/.env
@@ -1,4 +1,12 @@
-DATABASE_URL=sqlite:///./test.db
-SECRET_KEY=mysecretkey
-UPLOAD_DIR=uploads
-DEMO_MODE=1
+DOMAIN=localhost
+ENVIRONMENT=local
+PROJECT_NAME="ApDPS"
+DEMO_MODE=True
+DEMO_SQL_ALCHEMY_DATABASE_URI=sqlite:///./demo.db
+app_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173"
+SECRET_KEY=changethis
+POSTGRES_SERVER=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=apdps_db
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=pass
