--- a/.env
+++ b/.env
@@ -1,12 +1,21 @@
 DOMAIN=localhost
-ENVIRONMENT=local
+
 PROJECT_NAME="ApDPS"
-DEMO_MODE=True
-DEMO_SQL_ALCHEMY_DATABASE_URI=sqlite:///./demo.db
 app_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173"
 SECRET_KEY=changethis
+
+# Environment: local, staging, production
+ENVIRONMENT=local
+LOCAL_SQL_ALCHEMY_DATABASE_URI='sqlite:///./demo.db'
+
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=apdps_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=pass
+
+ORACLE_SERVER=localhost
+ORACLE_PORT=1521
+ORACLE_SERVICE_NAME=orclpdb
+ORACLE_USER=admin
+ORACLE_PASSWORD=root
