--- a/.env
+++ b/.env
@@ -5,14 +5,14 @@ app_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https
 SECRET_KEY=changethis
 
 # Environment: local, staging, production
-ENVIRONMENT=local
+ENVIRONMENT=staging
 LOCAL_SQL_ALCHEMY_DATABASE_URI='sqlite:///./demo.db'
 
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=apdps_db
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=pass
+POSTGRES_USER=apdps
+POSTGRES_PASSWORD=apdps
 
 ORACLE_SERVER=localhost
 ORACLE_PORT=1521
