--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ app_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https
 SECRET_KEY=changethis
 
 # Environment: local, staging, production
-ENVIRONMENT=staging
+ENVIRONMENT=local
 LOCAL_SQL_ALCHEMY_DATABASE_URI='sqlite:///./demo.db'
 
 POSTGRES_SERVER=localhost
