--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -9,11 +6,7 @@
             "type": "debugpy",
             "python": "D:/Aplikasi SKK Migas/backend/.venv/Scripts/python.exe",
             "request": "launch",
-            "module": "uvicorn",
-            "args": [
-                "app.core.main:app",
-                "--reload"
-            ],
+            "module": "run",
             "jinja": true
         }
     ]
